--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,11 @@
     <properties>
         <java.version>1.8</java.version>
 <!--        -->
-        <mysql.connetor.version>8.0.15</mysql.connetor.version>
+<!--        <mysql.connetor.version>8.0.15</mysql.connetor.version>-->
 <!--        -->
         <jsonwebtoken.version>0.8.0</jsonwebtoken.version>
 
             <failOnMissingWebXml>false</failOnMissingWebXml>
-
-
     </properties>
 
     <dependencies>
@@ -45,6 +43,22 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
+        </dependency>
+
+        <!-- PostgreSQL -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4.1209.jre7</version>
         </dependency>
 
         <!-- MySQL connector -->
@@ -81,11 +95,11 @@
 
 
 
-                <dependency>
-                    <groupId>mysql</groupId>
-                    <artifactId>mysql-connector-java</artifactId>
-                    <version>${mysql.connetor.version}</version>
-                </dependency>
+<!--                <dependency>-->
+<!--                    <groupId>mysql</groupId>-->
+<!--                    <artifactId>mysql-connector-java</artifactId>-->
+<!--                    <version>${mysql.connetor.version}</version>-->
+<!--                </dependency>-->
 
 
 
