--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,7 @@ spring.liquibase.password=a07db0d71d855ca6c1560d812218395bd89297ee314f0fffacdade
 liquibase.
 jwt.token.secret=jwtappdemo
 jwt.token.expired=3600000
+#
+#hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+#hibernate.show_sql=true
+#hibernate.hbm2ddl.auto=update
