--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,8 @@
 server.port=${PORT:8080}
 spring.profiles.active=production
 
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.datasource.url=jdbc:postgresql://ec2-54-195-252-243.eu-west-1.compute.amazonaws.com:5432/d8173ogg5f0gh1?sslmode=require&serverTimezone=UTC
 spring.datasource.driver-class-name=org.postgresql.Driver
