--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>JwtAppDemo</name>
     <description>JWT based spring security REST API</description>
 
-    <packaging>war</packaging>
+<!--    <packaging>war</packaging>-->
 
     <properties>
         <java.version>1.8</java.version>
